--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,12 @@
-version: 0.1
+version: 0.2
 
 phases:
+        install:
+            runtime-versions:
+                nodejs: 8
         build:
                 commands:
-                        - Echo nothing to do yet
+                        - echo "Nothing to do yet"
 artifacts:
         files:
                 - index.html
